--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,11 +191,14 @@ a {
   background-color: #fff;
   border-radius: 24px;
   background: #fff;
-  box-shadow: 0px 10px 80px 0px rgba(0, 0, 0, 0.05);
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.hero .right .card2:hover {
+  box-shadow: 0px 10px 80px 0px rgba(0, 0, 0, 0.305);
 }
 .hero .right .card2 .title {
   text-align: center;
@@ -226,7 +229,9 @@ a {
   right: 45px;
   border-radius: 24px;
   background: #fefefd;
-  box-shadow: 0px 12px 80px 0px rgba(0, 0, 0, 0.05);
+}
+.hero .card3:hover {
+  box-shadow: 0px 12px 80px 0px rgba(0, 0, 0, 0.333);
 }
 .hero .card3 .title {
   color: #0d1111;
@@ -627,6 +632,7 @@ a {
   font-style: normal;
   font-weight: 600;
   line-height: 70px;
+  margin: auto 0;
 }
 /* ==============footer========== */
 .footer {
@@ -641,7 +647,7 @@ a {
   display: flex;
   flex-direction: column;
 }
-.column .column-container .tilte {
+.column .column-container .title {
   color: #2e2e2e;
   font-size: 1.8rem;
   font-weight: 500;
@@ -651,20 +657,17 @@ a {
   color: #535353;
   font-size: 1.6rem;
 }
-.column .column-container a:first-child {
-  margin-top: 25px;
+.column .column-container a:first-of-type {
+  margin-top: 27px;
 }
 .column .social a {
   display: flex;
-
   align-items: center;
 }
-.column .social a div {
-  margin-right: 11px;
+.column .social a span {
   width: 20px;
   height: 20px;
-}
-.column .social a div {
+  margin-right: 11px;
   display: flex;
   justify-content: center;
   align-items: center;
